refactor(kernel): 重构内核模块依赖和管道架构
- 将 aperture-parameter、aperture-opening、aperture-pipeline、aperture-kernel 模块移至 Kernel 层
- 移除 aperture-opening-geometry 和 aperture-fabric 模块从 Platform 层
- 将 OpeningGenerationPipeline 替换为由 ApertureKernel 驱动的统一管道架构
- 添加 OpeningInstanceRequestMapper 处理实例到请求的映射
- 在 KernelBuilder 中修复异步线程命名逻辑
- 为 aperture-kernel 和 aperture-pipeline 模块添加测试资源配置
- 更新 OpeningGenerationService 作为内核的薄层桥接器
- 完全集成内核到运行时生产路径，